tests/e2e/semantics/semi_global_assignment6.error
Error: syntax error in story at line 3, column 1

3|    a["a"] = "b"
      ^^^^^^^^

E0127: `a[]` is readonly and can not be assigned to.
