tests/e2e/semantics/semi_global_assignment6.story
# FEAT: globals=False
a = {}
a["a"] = "b"
